[EDIT]Tambah , edit  kamar kurang fasilitas karena baru dijoin , search kamar

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,7 @@
-1.Tambah kamar kurang fasilitas karena baru dijoin
+Senin Depan Setidaknya selesai
+1.Tambah kamar kurang fasilitas karena baru dijoin[DONE]
+2.Plus Editnya[DONE]
 2.Pembayaran user
 3.resepsionis konfirmasi
-4.Search Kamar
+4.Search Kamar[DONE]
+5.Tampilan Dashboard
