--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,9 @@ Modal Fasilitas Di Admin tambah data
 +(Search Kamar[DONE])
 Tampilan Dashboard
 +(form bayar[DONE])
+
+Kamis
+Dropdown Fasilitas Dinamis
+Mengubah Tampilan Navbar tidak responsive di mobile
+Navbar profile
+Update poto profile dan bio user
