--- a/todo.txt
+++ b/todo.txt
@@ -5,7 +5,7 @@ Modal Fasilitas Di Admin tambah data
 +(print Pembayaran user[DONE])
 +(resepsionis konfirmasi[DONE])
 +(Search Kamar[DONE])
-Tampilan Dashboard
++(Tampilan Dashboard Chart[DONE])
 +(form bayar[DONE])
 
 Kamis
