[ADD]View Edit Fasilitas

--- a/todo.txt
+++ b/todo.txt
@@ -11,4 +11,6 @@ Kamis
 +(Dropdown Fasilitas Dinamis[DONE])
 Mengubah Tampilan Navbar tidak responsive di mobile
 Navbar profile
-Update poto profile dan bio user
++(Update poto profile dan bio user[DONE])
++(View Fasilitas[DONE])
+Edit dan Tambah Fasilitas
